--- a/client/authorization_code/public/stylesheets/Style.css
+++ b/client/authorization_code/public/stylesheets/Style.css
@@ -13,6 +13,7 @@ body{
   font-size: 16px;
 }
 
+
 #title{
   font-weight: bolder;
   font-size: 64px;
@@ -20,16 +21,15 @@ body{
   color: white;
   letter-spacing:8px;
 }
-
+#container{
+  text-align: center;
+}
 
 
 #maindiv{
   border: solid #fff 5px;
   text-align: center;
   height:20vh;
-  width: 80vh;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 #login{
@@ -45,11 +45,3 @@ body{
   font-weight: bold;
   border: solid #fff 3px;
 }
-/*
-#footer{
-  position: absolute;
-  bottom:0;
-  height: 10vh;
-  opacity: 0.8;
-
-}*/
